Update1 mystyles.css
changed:
text fonts and font family
text color from purple to white
background color from mustard yellow to grey #566472

--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -1,9 +1,9 @@
   body {
    padding-left: 11em;
-   font-family: Georgia, "Times New Roman",
-          Times, serif;
-		  color: purple;
-    background-color: #d8da3d }
+   font-family: Arial, Helvetica,
+          Times, sans-serif;
+		  color: white;
+    background-color: #566472 }
 	 ul.navbar {
     list-style-type: none;
     padding: 0;
