--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -23,9 +23,9 @@
   ul.navbar a {
     text-decoration: none }
   a:link {
-    color: blue }
+    color: #50C8C6 }
   a:visited {
-    color: purple }
+    color: #50C8C6 }
 	address {
     margin-top: 1em;
     padding-top: 1em;
